--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,21 @@
+# built in checks available.
+check:
+  example:
+  hostsfile:
+  yum:
+
+
+# set environment paths needed by checks
+path:
+  env: /bin/env
+  bash: /bin/bash
+  yum: /usr/bin/yum
+  sudo: /usr/bin/sudo
+
+# set paths to init scripts
+init:
+  puppet: /etc/init.d/puppet
+                      
 # enable or disable logging
 log: 1
 
@@ -34,13 +52,3 @@ log4perl:
     log4perl.appender.LOG1.layout    = Log::Log4perl::Layout::PatternLayout
     log4perl.appender.LOG1.layout.ConversionPattern = %d %p %m %n
 
-# set environment paths needed by checks
-path:
-  env: /bin/env
-  bash: /bin/bash
-  yum: /usr/bin/yum
-  sudo: /usr/bin/sudo
-
-# set paths to init scripts
-init:
-  puppet: /etc/init.d/puppet
