--- a/config.yaml
+++ b/config.yaml
@@ -1,21 +1,3 @@
-# built in checks available.
-check:
-  example:
-  hostsfile:
-  yum:
-
-
-# set environment paths needed by checks
-path:
-  env: /bin/env
-  bash: /bin/bash
-  yum: /usr/bin/yum
-  sudo: /usr/bin/sudo
-
-# set paths to init scripts
-init:
-  puppet: /etc/init.d/puppet
-                      
 # enable or disable logging
 log: 1
 
@@ -52,3 +34,57 @@ log4perl:
     log4perl.appender.LOG1.layout    = Log::Log4perl::Layout::PatternLayout
     log4perl.appender.LOG1.layout.ConversionPattern = %d %p %m %n
 
+# base template for new nrpe checks.
+template: |
+  #!/usr/bin/env perl
+
+  use warnings;
+  use strict;
+
+  use Nagios::Nrpe;
+  use Getopt::Long;
+  use Pod::Usage;
+
+  my $opts = { verbose => 0 };
+  GetOptions( $opts, 'verbose|v', 'help|h', 'man|m' );
+
+  my $nrpe = Nagios::Nrpe->new( verbose => $opts->{verbose} );
+
+
+  __END__
+
+  =head1 NAME
+
+  B<[% checkname %]l> - INSERT INFO HERE.
+
+  =head1 SYNOPSIS
+
+  =head2 Available Options
+
+   <[% checkname %] --verbose <prints info to stdout> --help <prints help> --man <prints full man page>
+
+  =head1 OPTIONS
+
+  =over 8
+
+  =item B<-v, --verbose>
+   Prints the output from $nrpe->info(), $nrpe->debug() and $nrpe->error() to
+   stdout.
+
+  =item B<-h, --help>
+   Prints a brief help message from this script.
+
+  =item B<-m, --man>
+   Prints the full manual page from this script.
+
+  =back
+
+  =head1 DESCRIPTION
+
+  INSERT YOUR DESCRIPTION HERE.
+
+  =head1 AUTHOR
+
+  INSERT AUTHOR NAME, C<< < INSERT AUTHOR EMAIL > >>
+
+  =cut
