--- a/dist.ini
+++ b/dist.ini
@@ -1,22 +1,9 @@
 name    = Nagios-Nrpe
+version = 0.001
 author  = Sarah Fuller <sarah@averna.id.au>
 license = Perl_5
 copyright_holder = Sarah Fuller
 copyright_year   = 2012
 
-[@Git]
-changelog   = Changes    
-allow_dirty = dist.ini  
-allow_dirty = Changes  
-commit_msg  = v%v%n%n%c 
-tag_format  = %v 
-tag_message = %v
-push_to     = origin master
-
-[Git::NextVersion]
-first_version = 0.001
-version_by_branch = 0
-
 [@Basic]
-[PodWeaver]
 [AutoPrereqs]
