--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 name    = Nagios-Nrpe
 version = 0.001
-author  = Sarah Fuller <sarah@averna.id.au>
+author  = Sarah Fuller, <sarah at averna.id.au>
 license = Perl_5
 copyright_holder = Sarah Fuller
 copyright_year   = 2012
