--- a/config.yaml
+++ b/config.yaml
@@ -64,11 +64,10 @@ template: |
   use Getopt::Long;
   use Pod::Usage;
 
-  our $VERSION  = '0.001';
-
   ## no critic (POD)
   ## no critic (return)
 
+  our $VERSION  = '0.001';
 
   ## Setup default options.
   my $OPTIONS = { verbose => 0, }; 
@@ -84,16 +83,11 @@ template: |
 
   sub check
   {
-      # Usage: INSERT USAGE DOCS HERE.
-      # Params: $options - Expecting hashref of command line params.
-      # INSERT MORE PARAM DOCS HERE.
-      # Returns: INSERT RETURN DOCS HERE.
-  
       my $options = shift;
       my $nrpe    = Nagios::Nrpe->new( verbose => $options->{verbose}, );
 
-      # INSERT CODE LOGIC HERE.
-      # SEE: Nagios::Nrpe DOCS FOR MORE INFOMATION.
+      # INSERT YOUR CODE LOGIC HERE.
+      # SEE: perldoc Nagios::Nrpe FOR MORE INFOMATION.
 
       $nrpe->exit_ok('OK');
   };
