--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
-name    = Nagios-Nrpe
-version = 0.001
-author  = Sarah Fuller, <sarah at averna.id.au>
-license = Perl_5
+name             = Nagios-Nrpe
+version          = 0.001
+author           = Sarah Fuller, <sarah at averna.id.au>
+license          = Perl_5
 copyright_holder = Sarah Fuller
 copyright_year   = 2012
 
@@ -9,3 +9,4 @@ copyright_year   = 2012
 [AutoPrereqs]
 [Prereqs / TestRequires]
 Perl::Critic = 0 ; for testing
+FindBin      = 0 ; for testing
