--- a/dist.ini
+++ b/dist.ini
@@ -10,3 +10,9 @@ copyright_year   = 2012
 [Prereqs / TestRequires]
 Perl::Critic = 0 ; for testing
 FindBin      = 0 ; for testing
+
+
+[TestRelease]
+[ConfirmRelease]
+[UploadToCPAN]
+ 
